homework4 real đã chữa

--- a/homework-4-real/bai2/index.html
+++ b/homework-4-real/bai2/index.html
@@ -25,13 +25,8 @@
 </head>
 
 <body>
-    <div class="container" id="toDoList">
-        <to-do></to-do>
-        <to-do></to-do>
-        <to-do></to-do>
-        <to-do></to-do>
-        <to-do></to-do>
-        <to-do></to-do>
+    <div class="container" id="app">
+
     </div>
 
     <script src="./app.js" type="module"></script>
