--- a/Chat-Online/index.html
+++ b/Chat-Online/index.html
@@ -48,6 +48,7 @@
 <body>
     <div id="app">
         <login-form></login-form>
+        <register-form></register-form>
     </div>
 
     <script src="./js/app.js" type="module"></script>
