--- a/Chat-Online/index.html
+++ b/Chat-Online/index.html
@@ -43,12 +43,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"
         integrity="sha512-nOQuvD9nKirvxDdvQ9OMqe2dgapbPB7vYAMrzJihw5m+aNcf0dX53m6YxM4LgA9u8e9eg9QX+/+mPu8kCNpV2A=="
         crossorigin="anonymous"></script>
+
+    <script src="//unpkg.com/navigo@6"></script>
 </head>
 
 <body>
     <div id="app">
-        <login-form></login-form>
-        <register-form></register-form>
+        <message-list messages='[
+            {"content": "hello", "owned": false},
+            {"content": "whats up", "owned": true},
+            {"content": "nothing", "owned": false}
+        ]'></message-list>
+        <send-message-form></send-message-form>
     </div>
 
     <script src="./js/app.js" type="module"></script>
