--- a/test CI56/B/index.html
+++ b/test CI56/B/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test CI56</title>
+
+    <script src="//unpkg.com/navigo@6"></script>
 </head>
 
 <body>
-    <div id="app">
-        <main-screen></main-screen>
-    </div>
-
+    <div id="app"></div>
     <script src="./js/app.js" type="module"></script>
 </body>
 
